oracle-cluster/manifests/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: default
  labels:
    name: whoami
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.local
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  name: http
            pathType: Prefix
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header   X-Forwarded-Host   $http_host;
      proxy_set_header   X-Forwarded-For    $remote_addr;
  labels:
    name: qbit
spec:
  ingressClassName: nginx
  rules:
    - host: qbit.local
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  name: http
            pathType: Prefix
            path: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: default
  labels:
    name: prowlarr
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.local
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  name: http
            pathType: Prefix
            path: /
